more scrollbar tweaks so ie doesn't look bad.  gave the header a fixed height and re-enabled the iframe resize js.  for my next trick: i'll maintain all the same functionality, but without the use of tables! (hopefully)
git-svn-id: http://code.creativecommons.org/svnroot/ccsearch/branches/iframe-pretty@13115 aec4f576-4910-0410-beeb-ecb0427469e7

--- a/search-ie.css
+++ b/search-ie.css
@@ -8,6 +8,7 @@
 
 body{
    overflow: visible;
+   background-color: #456724;
 }
 
 #results-box{
@@ -18,6 +19,10 @@ body{
 #results{
    height: 400px;
    vertical-align: top;
+}
+
+#everything{
+	height: auto;
 }
 
 #left{
