--- a/search.css
+++ b/search.css
@@ -18,7 +18,7 @@ body{
 	margin: 0px;
    height: 100%;
    width: 100%;
-   overflow: hidden;
+overflow: hidden;
 }
 
 #everything{
@@ -26,7 +26,10 @@ height: 100%;
 margin: 0px;
 padding: 0px;
 width: 100%;
-   border-spacing: 0;
+   border-spacing: 0px;
+border-collapse: collapse;
+	table-layout: fixed;
+border: 0px;
 }
 #everything tbody{
 	padding: 0px;
@@ -103,6 +106,7 @@ a, a:link, a:visited {
    padding: 0px;
    text-align: left;
    padding-bottom: 0px;
+	height: 100px;
 }
 
 #header a {
@@ -216,6 +220,8 @@ a, a:link, a:visited {
    text-align: right;
    padding: 3px 0px;
    margin-bottom: 0px;
+	vertical-align: bottom;
+	margin-top: 5px;
 }
 
 a#aboutsearch{
